// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test flashcardComponent renders a view with a question when the state flipped is false 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FFFFFF",
      "borderRadius": 30,
      "flex": 6,
      "height": "60%",
      "justifyContent": "center",
      "marginBottom": 10,
      "marginTop": "10%",
      "transform": Array [
        Object {
          "rotateX": "0deg",
        },
      ],
      "width": "80%",
    }
  }
>
  <Text
    style={
      Object {
        "color": "white",
        "fontSize": 30,
        "margin": "10%",
        "textAlign": "center",
      }
    }
  >
    Question:
Lorem ipsum dolor sit amet, consectetur adipiscing elit.
  </Text>
</View>
`;

exports[`test flashcardComponent renders a view with an answer when the state flipped is true 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FFFFFF",
      "borderRadius": 30,
      "flex": 6,
      "height": "60%",
      "justifyContent": "center",
      "marginBottom": 10,
      "marginTop": "10%",
      "transform": Array [
        Object {
          "rotateX": "0deg",
        },
      ],
      "width": "80%",
    }
  }
>
  <Text
    style={
      Object {
        "color": "white",
        "fontSize": 30,
        "margin": "10%",
        "textAlign": "center",
      }
    }
  >
    Answer:
Lorem ipsum dolor sit amet.
  </Text>
</View>
`;
